<resources>
    <string name="app_name">1.5 Main Menu</string>
    <string name="checkboxText">Extended Menu</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="unite">Unite</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="sort">Sort</string>
    <string name="exit">Exit</string>
</resources>