<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="3"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/menu_select"
        android:orderInCategory="2"
        android:title="@string/select">
    </item>
    <item
        android:id="@+id/menu_unite"
        android:title="@string/unite">
    </item>
    <item
        android:id="@+id/menu_cut"
        android:title="@string/cut">
    </item>
    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_copy"
            android:orderInCategory="1"
            android:title="@string/copy">
        </item>
        <item
            android:id="@+id/menu_paste"
            android:orderInCategory="2"
            android:title="@string/paste">
        </item>
        <item
            android:id="@+id/menu_sort"
            android:orderInCategory="3"
            android:title="@string/sort">
        </item>
        <item
            android:id="@+id/menu_exit"
            android:orderInCategory="4"
            android:title="@string/exit">
        </item>
    </group>
</menu>